--- a/Unit_1/index.html
+++ b/Unit_1/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<title>If it broke...</title>
+	<title>Zero Waste</title>
 </head>
 <body>
-	<h1>Worn Wear</h1>
-	<p>This is all the info on getting your worn wear fixed.</p>
+	<h1>Living a Zero Waste Life</h1>
+	<p>This is all the info on how to live with zero waste for beginners!</p>
 </body>
 </html>
 
