--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -11,7 +11,9 @@
 <h3 id="slogan"> Zero Waste, enjoy the Planet!</h3>
 
 
-<img sr="images/yosemite">
+<img sr="images/yosemite.png"
+alt="yosemite image"
+title="yosemite">
 
 
 <p> Our mission is to provide you with a variety of low to high impact ways that you can begin to shift your life to zero waste. Even if you are just starting out, we want you to have a variety of methods that you can use to reduce your impact on the planet. </p>
