--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -11,7 +11,7 @@
 <h3 id="slogan"> Zero Waste, enjoy the Planet!</h3>
 
 
-<img sr="images/yosemite.png"
+<img sr="images/yosemite"
 alt="yosemite image"
 title="yosemite">
 
